Updating jslee/sips interop demo to JSLEE 1.2.0.CR1 and MMS 1.0.0.BETA3
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2639 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -11,12 +11,14 @@
 	</parent>
 	
 	<artifactId>jslee-sips-interop-demo-jslee-interop-sbb</artifactId>
-	
+		
 	<dependencies>
+	
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>jslee-sips-interop-commons</artifactId>
 			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
@@ -32,18 +34,20 @@
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-constants</artifactId>
-			<version>1.0.0.BETA2</version>
+			<version>1.0.0.BETA3</version>
 			<scope>provided</scope>
 		</dependency>		
 		<dependency>				
-			<groupId>org.mobicents.resources</groupId>
-			<artifactId>media-ratype</artifactId>
-			<version>1.2.0.BETA3-SNAPSHOT</version>
+			<groupId>org.mobicents.servers.media.controllers</groupId>
+			<artifactId>msc-ratype</artifactId>
+			<version>1.0.0.BETA3</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.resources</groupId>
 			<artifactId>tts-ratype</artifactId>
-			<version>1.2.0.BETA3-SNAPSHOT</version>
+			<version>1.2.0.CR1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
