Update MMS version dependencies
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2826 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/shopping-demo/web/pom.xml
+++ b/sip-servlets-examples/shopping-demo/web/pom.xml
@@ -53,19 +53,19 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>1.0.0.BETA3-SNAPSHOT</version>
+			<version>1.0.0.BETA4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api-local-impl</artifactId>
-			<version>1.0.0.BETA3-SNAPSHOT</version>
+			<version>1.0.0.BETA4</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-constants</artifactId>
-			<version>1.0.0.BETA3-SNAPSHOT</version>
+			<version>1.0.0.BETA4</version>
 		</dependency>
 		<!-- j2ee dependencies -->
 		<dependency>
