--- a/sip-servlets-examples/shopping-demo/ear/pom.xml
+++ b/sip-servlets-examples/shopping-demo/ear/pom.xml
@@ -162,7 +162,7 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>1.0.0.BETA3-SNAPSHOT</version>
+			<version>1.0.0.BETA4</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.mobicents.servers.media</groupId>
@@ -179,7 +179,7 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api-local-impl</artifactId>
-			<version>1.0.0.BETA3-SNAPSHOT</version>
+			<version>1.0.0.BETA4</version>
 			<scope>provided</scope>
 		</dependency>		
 	</dependencies>
