Update to the release script to avoid the hudson job to fail
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2852 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -104,7 +104,10 @@
 	</target>
 	
 	<target name="deploy-mgmnt">
-		<ant dir="${base.path}/../../sip-servlets-management/" antfile="build.xml" target="war" />
+		<exec executable="${mvn.executable}" dir="${base.path}/../../sip-servlets-management/">
+			<arg line="clean install"/>
+		</exec>
+
 		<copy file="${base.path}/../../sip-servlets-management/build/tmp/sip-servlets-management.war"
 			tofile="${base.path}/jboss-${jboss.version}/server/default/deploy/sip-servlets-management.war"/>
 		<copy file="${base.path}/../../sip-servlets-management/build/tmp/sip-servlets-management.war"
