--- a/sip-servlets-examples/jslee-sips-interop/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/pom.xml
@@ -115,4 +115,35 @@
 		<release.name.suffix>-jboss-${jboss.version}</release.name.suffix> 		
 		<release.name>${release.name.prefix}${pom.version}${release.name.suffix}</release.name>
 	</properties>
+	<!-- repositories -->
+	<repositories>
+		<repository>
+			<id>maven2-repository.dev.java.net</id>
+			<name>Java.net Repository for Maven</name>
+			<url>http://download.java.net/maven/2/</url>
+			<layout>default</layout>
+		</repository>
+		<repository>			
+			<id>JbossRepository</id>
+			<name>Jboss Repository</name>
+			<url>http://repository.jboss.org/maven2</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+		<repository>
+			<id>jboss-snapshots</id>
+			<name>JBoss Snapshot Repository</name>
+			<url>http://snapshots.jboss.org/maven2</url>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 </project>
