--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -104,9 +104,7 @@
 	</target>
 	
 	<target name="deploy-mgmnt">
-		<exec executable="${mvn.executable}" dir="${base.path}/../../sip-servlets-management/">
-			<arg line="clean install"/>
-		</exec>
+		<ant dir="${base.path}/../../sip-servlets-management/" antfile="build.xml" target="war" />
 
 		<copy file="${base.path}/../../sip-servlets-management/build/tmp/sip-servlets-management.war"
 			tofile="${base.path}/jboss-${jboss.version}/server/default/deploy/sip-servlets-management.war"/>
