Comit according to r2903 - Changing design documents location
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2904 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -196,7 +196,7 @@
 	
 	<target name="set-src-excludes">
         <defaultexcludes add="**/target/**"/>
-        <defaultexcludes add="**/docs/**"/>
+        <defaultexcludes add="**/design-docs/**"/>
         <defaultexcludes add="**/legacy/**"/>
         <defaultexcludes add="**/release/**"/>
         <defaultexcludes add="**/logs/**"/>
