--- a/sip-servlets-test-suite/tck/excludeList.properties
+++ b/sip-servlets-test-suite/tck/excludeList.properties
@@ -67,31 +67,31 @@ exclude.method.29=com.bea.sipservlet.tck.agents.api_javax_servlet_sip.SipSession
 
 exclude.method.30=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipErrorEventListenerTest.testNoPrackReceived001
 # : added in excludeList since our container doesn't support PRACK extension.
-exclude.method.31=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletListenerTest.testServletInitialized001
+#exclude.method.31=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletListenerTest.testServletInitialized001
 # : Test is wrong, it assumes the same instance is returned for the listener and for the servlet which is not the case.
-exclude.method.32=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletMessageTest.testAddAddressHeader001
+exclude.method.31=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletMessageTest.testAddAddressHeader001
 # : My-Address Header address comes back with <> around it like My-Address: <sip:tck2@domain.com> and it is not accepted by the TCK which check against My-Address: sip:tck2@domain.com
-exclude.method.33=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletMessageTest.testGetTo001
+exclude.method.32=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletMessageTest.testGetTo001
 # : junit.framework.AssertionFailedError: the reason gotten from Server:the To header's url="JSR289_TCK" <sip:JSR289_TCK@127.0.0.1:5080>but the expected=JSR289_TCK <sip:JSR289_TCK@127.0.0.1:5080> it does not take into account that display name can have "" around it.
-exclude.method.34=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletMessageTest.testSetAddressHeader001
+exclude.method.33=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletMessageTest.testSetAddressHeader001
 # : My-Address Header address comes back with <> around it like My-Address: <sip:tck2@domain.com> and it is not accepted by the TCK which check against My-Address: sip:tck2@domain.com
-exclude.method.35=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoProvisionalResponse001
+exclude.method.34=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoProvisionalResponse001
 # - we dont support prack - can call createAck on a provisionnal response (183)
-exclude.method.36=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.TimerServiceTest.testCreateTimer001
+#exclude.method.36=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.TimerServiceTest.testCreateTimer001
 # : Test is wrong, it assumes the same instance is returned for the listener and for the servlet which is not the case.
-exclude.method.37=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.TimerServiceTest.testCreateTimer002
+#exclude.method.37=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.TimerServiceTest.testCreateTimer002
 # : Test is wrong, it assumes the same instance is returned for the listener and for the servlet which is not the case.
-exclude.method.38=com.bea.sipservlet.tck.agents.spec.SipServletListenerTest.testSipServletListener
+#exclude.method.38=com.bea.sipservlet.tck.agents.spec.SipServletListenerTest.testSipServletListener
 #: The test is wrong, it expectes sipFactor.createURI(String) to throw IllegalArgumentExcpetion while the javadoc says a parse exception.
-exclude.method.39=com.bea.sipservlet.tck.agents.spec.CommittedStateTest.testCommittedStateUnderB2bua
+#exclude.method.39=com.bea.sipservlet.tck.agents.spec.CommittedStateTest.testCommittedStateUnderB2bua
 # - it tries to getServletName from a timer
 #exclude.method.41=com.bea.sipservlet.tck.agents.spec.ContextTest.testContext1
 # : it tries to check if we are compatible with the 2.3 spec but from http://java.sun.com/javaee/5/docs/api/javax/servlet/ServletContext.html#getMinorVersion() and the spec it should be 2.5.
-exclude.method.40=com.bea.sipservlet.tck.agents.spec.SessionLifetimeTest.testProxySessionLifetime
+#exclude.method.40=com.bea.sipservlet.tck.agents.spec.SessionLifetimeTest.testProxySessionLifetime
 # - it tries to getServletName from a listener
-exclude.method.41=com.bea.sipservlet.tck.agents.spec.SessionLifetimeTest.testUacSessionLifetime
+#exclude.method.41=com.bea.sipservlet.tck.agents.spec.SessionLifetimeTest.testUacSessionLifetime
 # - it tries to getServletName from a listener
-exclude.method.42=com.bea.sipservlet.tck.agents.spec.SessionLifetimeTest.testUasSessionLifetime
+#exclude.method.42=com.bea.sipservlet.tck.agents.spec.SessionLifetimeTest.testUasSessionLifetime
 # - it tries to getServletName from a listener
 #exclude.method.45=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyTest.testCreateProxyBranches101
 # - expects sipFactor.createURI(String) to throw IllegalArgumentExcpetion while the javadoc says a parse exception.
