specifying location for svn tags
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2953 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,12 @@
 							</execution>
 						</executions>
 					</plugin>
+        <plugin>
+          <artifactId>maven-release-plugin</artifactId>
+          <configuration>
+            <tagBase>https://mobicents.googlecode.com/svn/tags/sip-servlets</tagBase>
+          </configuration>
+        </plugin>
 				</plugins>
 			</build>
 		</profile>
