specifying location for svn tags
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2954 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,9 @@
 				<module>sip-servlets-examples</module>
 				<module>sip-servlets-test-suite</module>
 			</modules>
+			<properties>
+				 <maven.test.skip>true</maven.test.skip>
+			</properties>
 		</profile>
 	</profiles>
 	<!-- repositories -->
