--- a/sip-servlets-examples/facebook-c2c/pom.xml
+++ b/sip-servlets-examples/facebook-c2c/pom.xml
@@ -1,7 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
@@ -48,7 +45,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.6-SNAPSHOT</version>
+			<version>1.1.6</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -88,8 +85,7 @@
 						<phase>package</phase>
 						<configuration>
 							<tasks>
-								<copy verbose="true" overwrite="true"
-									todir="${env.JBOSS_HOME}/server/default/deploy/click-to-call-servlet-1.0.war" >
+								<copy verbose="true" overwrite="true" todir="${env.JBOSS_HOME}/server/default/deploy/click-to-call-servlet-1.0.war">
 									<fileset dir="${project.build.directory}/${project.build.finalName}/" />
 								</copy>								
 							</tasks>
