--- a/sip-servlets-examples/media-playback-servlet/pom.xml
+++ b/sip-servlets-examples/media-playback-servlet/pom.xml
@@ -1,6 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
@@ -95,7 +93,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.1.6-SNAPSHOT</version>
+			<version>1.1.6</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -126,15 +124,11 @@
 							<tasks>
 
 
-								<move
-									todir="${basedir}/target/media-playback-servlet-1.0/WEB-INF/lib/"
-									includeemptydirs="false" verbose="true">
-									<fileset
-										dir="${basedir}/target/media-playback-servlet-1.0/WEB-INF/lib/">
+								<move todir="${basedir}/target/media-playback-servlet-1.0/WEB-INF/lib/" includeemptydirs="false" verbose="true">
+									<fileset dir="${basedir}/target/media-playback-servlet-1.0/WEB-INF/lib/">
 										<include name="**/*-1.0.jar" />
 									</fileset>
-									<mapper type="glob" from="*-1.0.jar"
-										to="*.jar" />
+									<mapper type="glob" from="*-1.0.jar" to="*.jar" />
 								</move>
 
 							</tasks>
