Updating the projects' classpath for the new dev iteration
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@2996 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -218,7 +218,7 @@
         
         <copy todir="${base.path}/src/mobicents/servers/sip-servlets" includeEmptyDirs="false">
             <fileset dir="${ant.file.mobicents.release}/../../.." 
-            	     includes="**/sip-servlets-application-router/** **/sip-servlets-bootstrap/** **/sip-servlets-examples/click-to-call/** **/sip-servlets-impl/** **/sip-servlets-management/** **/sip-servlets-spec/**"
+            	     includes="**/pom.xml **/sip-servlets-application-router/** **/sip-servlets-bootstrap/** **/sip-servlets-examples/click-to-call/** **/sip-servlets-impl/** **/sip-servlets-management/** **/sip-servlets-spec/**"
                      excludes="**/mobicents-skin/** **/sip-servlets-bootstrap/src/site/** **/sip-servlets-impl/null/** **/www/**"/>
         </copy>
         
