fixing log path in log4j.xml for tomcat
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3054 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -201,7 +201,7 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}\lib" />
+										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}/lib" />
 										<copy verbose="true" file="docs/logging.properties" todir="${CATALINA_HOME}/conf" />
 										<copy verbose="true" file="docs/log4j.xml" todir="${CATALINA_HOME}/lib" />
                                         <copy todir="${CATALINA_HOME}">
