PRACK support added in relation to Issue 127 More Extensions : PRACK, OPTIONS, INFO. PRACK, OPTIONS, INFO Tested by the TCK. the excluded tests are now commented in TCK excludeList
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3082 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/tck/excludeList.properties
+++ b/sip-servlets-test-suite/tck/excludeList.properties
@@ -23,8 +23,7 @@
 ##########################################################################################
 
 # excluded class list
-exclude.class.1=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.Rel100ExceptionTest
-#exclude.class.2=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.AddressTest
+#exclude.class.1=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.Rel100ExceptionTest
 
 # excluded method list
 exclude.method.1=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyTest.testGetSetAddToPath001
@@ -38,32 +37,32 @@ exclude.method.8=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranch
 exclude.method.9=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testCancel002
 exclude.method.10=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.ProxyBranchTest.testCancel101
 
-exclude.method.11=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoSubscribe001
-exclude.method.12=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoNotify001
-exclude.method.13=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoMessage001
-exclude.method.14=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoPrackUpdate001
-exclude.method.15=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoRefer001
-exclude.method.16=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoPublish001
-exclude.method.17=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoInfo001
+#exclude.method.11=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoSubscribe001
+#exclude.method.12=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoNotify001
+#exclude.method.13=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoMessage001
+#exclude.method.14=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoPrackUpdate001
+#exclude.method.15=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoRefer001
+#exclude.method.16=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoPublish001
+#exclude.method.17=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletTest.testDoInfo001
 
 exclude.method.18=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletRequestTest.testPushPath001
 exclude.method.19=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletRequestTest.testPushPath101
 
-exclude.method.20=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack001
-exclude.method.21=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack101
-exclude.method.22=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack102
+#exclude.method.20=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack001
+#exclude.method.21=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack101
+#exclude.method.22=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testCreatePrack102
 
-exclude.method.23=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testSendReliably001
-exclude.method.24=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testSendReliably101
-exclude.method.25=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testSendReliably102
+#exclude.method.23=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testSendReliably001
+#exclude.method.24=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testSendReliably101
+#exclude.method.25=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServletResponseTest.testSendReliably102
 
 # those callback method can be implemented in asynchronous style, so it is hard to know how long to wait for the messages
 # coming from the server. You can include those cases and modify the waitDuration configuration defined in default.properties
 # according your condition.
-exclude.method.26=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipApplicationSessionListenerTest.testSessionDestroyed001
-exclude.method.27=com.bea.sipservlet.tck.agents.api_javax_servlet_sip.SipApplicationSessionListenerTest.testSessionCreated001
-exclude.method.28=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipSessionListenerTest.testSessionDestroyed001
-exclude.method.29=com.bea.sipservlet.tck.agents.api_javax_servlet_sip.SipSessionListenerTest.testSessionCreated001
+#exclude.method.26=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipApplicationSessionListenerTest.testSessionDestroyed001
+#exclude.method.27=com.bea.sipservlet.tck.agents.api_javax_servlet_sip.SipApplicationSessionListenerTest.testSessionCreated001
+#exclude.method.28=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipSessionListenerTest.testSessionDestroyed001
+#exclude.method.29=com.bea.sipservlet.tck.agents.api_javax_servlet_sip.SipSessionListenerTest.testSessionCreated001
 
 exclude.method.30=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipErrorEventListenerTest.testNoPrackReceived001
 # : added in excludeList since our container doesn't support PRACK extension.
