mms version is now a property of the parent maven examples script
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3107 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -26,6 +26,12 @@
 		<module>speed-dial</module>
 		<module>uac-register</module>
 	</modules>
+
+	<properties>
+		<!-- MOBICENTS MEDIA SERVER VERSIONS -->
+		<mms.version>1.0.0.BETA4</mms.version>
+	</properties>
+
 	<dependencies>
 		<!-- test dependencies -->
 		<dependency>
