mms version is now a property of the parent maven examples script
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@3108 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/shopping-demo/ear/pom.xml
+++ b/sip-servlets-examples/shopping-demo/ear/pom.xml
@@ -159,7 +159,7 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.mobicents.servers.media</groupId>
@@ -176,7 +176,7 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api-local-impl</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<scope>provided</scope>
 		</dependency>		
 	</dependencies>
