--- a/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/jslee-services/interop-sbb/pom.xml
@@ -34,13 +34,13 @@
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-constants</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<scope>provided</scope>
 		</dependency>		
 		<dependency>				
 			<groupId>org.mobicents.servers.media.controllers</groupId>
 			<artifactId>msc-ratype</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
