--- a/sip-servlets-examples/jslee-sips-interop/sips/business/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/business/pom.xml
@@ -82,13 +82,13 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<scope>provided</scope>			
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api-local-impl</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
