--- a/sip-servlets-examples/media-playback-servlet/pom.xml
+++ b/sip-servlets-examples/media-playback-servlet/pom.xml
@@ -37,13 +37,13 @@
 		<dependency>
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<scope>provided</scope>			
 		</dependency>
 		<dependency>		
 			<groupId>org.mobicents.servers.media</groupId>
 			<artifactId>mobicents-media-server-constants</artifactId>
-			<version>1.0.0.BETA4</version>
+			<version>${mms.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
